--- a/src/app/components/layout/Menu/MenuLeft/menu-left.component.html
+++ b/src/app/components/layout/Menu/MenuLeft/menu-left.component.html
@@ -24,42 +24,44 @@
         <ng-container *ngTemplateOutlet="menuTpl; context: {$implicit: menuDataActivated, level: 0}"></ng-container>
         <ng-template #menuTpl let-menuDataActivated let-level="level">
           <ng-container *ngFor="let item of menuDataActivated">
-            <ng-template #tooltipTpl>
-              {{ item.title }}
-            </ng-template>
-            <!-- group title item -->
-            <li nz-menu-group [nzTitle]="item.title" *ngIf="item.category"></li>
-            <!-- disabled item -->
-            <li nz-menu-item *ngIf="item.disabled" [nzSelected]="item.selected" [nzDisabled]="true" nz-tooltip
-              nzPlacement="right" [nzTitle]="isMenuCollapsed && level === 0 ? tooltipTpl : ''">
-              <span [ngStyle]="{'padding-left.px': isMenuCollapsed ? '0' : level * 15}">
-                <span class="title">{{item.title}}</span>
-                <span *ngIf="item.count" class="badge badge-success ml-2">{{ item.count }}</span>
-                <i *ngIf="item.icon" [ngClass]="[item.icon, 'icon']"></i>
-              </span>
-            </li>
-            <!-- main item -->
-            <li nz-menu-item *ngIf="!item.children && item.url" routerLink={{item.url}} [nzSelected]="item.selected"
-              [nzDisabled]="item.disabled" nz-tooltip nzPlacement="right"
-              [nzTitle]="isMenuCollapsed && level === 0 ? tooltipTpl : ''">
-              <span [ngStyle]="{'padding-left.px': isMenuCollapsed ? '0' : level * 15}">
-                <span class="title">{{item.title}}</span>
-                <span *ngIf="item.count" class="badge badge-success ml-2">{{ item.count }}</span>
-                <i *ngIf="item.icon" [ngClass]="[item.icon, 'icon']"></i>
-              </span>
-            </li>
-            <!-- submenu item with recursive template -->
-            <li nz-submenu *ngIf="item.children" [nzOpen]="item.open && !isMenuCollapsed">
-              <span title [ngStyle]="{'padding-left.px': isMenuCollapsed ? '0' : level * 15}">
-                <span class="title">{{item.title}}</span>
-                <span *ngIf="item.count" class="badge badge-success ml-2">{{ item.count }}</span>
-                <i *ngIf="item.icon" [ngClass]="[item.icon, 'icon']"></i>
-              </span>
-              <ul>
-                <ng-container *ngTemplateOutlet="menuTpl; context: {$implicit: item.children, level: level + 1}">
-                </ng-container>
-              </ul>
-            </li>
+            <ng-container *ngIf="!item.roles || item.roles.includes(role)">
+              <ng-template #tooltipTpl>
+                {{ item.title }}
+              </ng-template>
+              <!-- group title item -->
+              <li nz-menu-group [nzTitle]="item.title" *ngIf="item.category"></li>
+              <!-- disabled item -->
+              <li nz-menu-item *ngIf="item.disabled" [nzSelected]="item.selected" [nzDisabled]="true" nz-tooltip
+                nzPlacement="right" [nzTitle]="isMenuCollapsed && level === 0 ? tooltipTpl : ''">
+                <span [ngStyle]="{'padding-left.px': isMenuCollapsed ? '0' : level * 15}">
+                  <span class="title">{{item.title}}</span>
+                  <span *ngIf="item.count" class="badge badge-success ml-2">{{ item.count }}</span>
+                  <i *ngIf="item.icon" [ngClass]="[item.icon, 'icon']"></i>
+                </span>
+              </li>
+              <!-- main item -->
+              <li nz-menu-item *ngIf="!item.children && item.url" routerLink={{item.url}} [nzSelected]="item.selected"
+                [nzDisabled]="item.disabled" nz-tooltip nzPlacement="right"
+                [nzTitle]="isMenuCollapsed && level === 0 ? tooltipTpl : ''">
+                <span [ngStyle]="{'padding-left.px': isMenuCollapsed ? '0' : level * 15}">
+                  <span class="title">{{item.title}}</span>
+                  <span *ngIf="item.count" class="badge badge-success ml-2">{{ item.count }}</span>
+                  <i *ngIf="item.icon" [ngClass]="[item.icon, 'icon']"></i>
+                </span>
+              </li>
+              <!-- submenu item with recursive template -->
+              <li nz-submenu *ngIf="item.children" [nzOpen]="item.open && !isMenuCollapsed">
+                <span title [ngStyle]="{'padding-left.px': isMenuCollapsed ? '0' : level * 15}">
+                  <span class="title">{{item.title}}</span>
+                  <span *ngIf="item.count" class="badge badge-success ml-2">{{ item.count }}</span>
+                  <i *ngIf="item.icon" [ngClass]="[item.icon, 'icon']"></i>
+                </span>
+                <ul>
+                  <ng-container *ngTemplateOutlet="menuTpl; context: {$implicit: item.children, level: level + 1}">
+                  </ng-container>
+                </ul>
+              </li>
+            </ng-container>
           </ng-container>
         </ng-template>
       </ul>
