--- a/src/app/pages/auth/login/login.component.html
+++ b/src/app/pages/auth/login/login.component.html
@@ -1,6 +1,6 @@
 <div>
   <div class="text-center mb-5">
-    <h1 class="mb-5">
+    <h1 class="mb-5 px-3">
       <strong>Welcome to {{logo}}</strong>
     </h1>
     <p class="mb-4">
