--- a/src/app/components/layout/Sidebar/sidebar.component.html
+++ b/src/app/components/layout/Sidebar/sidebar.component.html
@@ -171,8 +171,9 @@
     nzTooltipPlacement="left" nz-tooltip class="cui__sidebar__toggleButton">
     <i class="fe fe-settings"></i>
   </a>
-  <a href="javascript: void(0);" style="bottom: calc(50% + 60px)" (click)="switchDarkTheme()"
-    nzTooltipTitle="Switch Dark / Light Theme" nzTooltipPlacement="left" nz-tooltip class="cui__sidebar__toggleButton">
+  <a href="javascript: void(0);" style="bottom: calc(50% + 60px)"
+    (click)="setTheme(theme === 'light' ? 'dark' : 'light')" nzTooltipTitle="Switch Dark / Light Theme"
+    nzTooltipPlacement="left" nz-tooltip class="cui__sidebar__toggleButton">
     <i *ngIf="theme === 'light'" class="fe fe-moon"></i>
     <i *ngIf="theme !== 'light'" class="fe fe-sun"></i>
   </a>
