table scroll-x amendments

--- a/src/app/pages/apps/helpdesk-dashboard/helpdesk-dashboard.component.html
+++ b/src/app/pages/apps/helpdesk-dashboard/helpdesk-dashboard.component.html
@@ -51,8 +51,8 @@
           <h6 class="text-uppercase text-dark font-weight-bold mb-3">
             Recent help requests
           </h6>
-          <div class="kit__utils__scrollTable mb-4">
-            <nz-table #basicTable [nzData]="requests" [nzShowPagination]="false" class="kit__utils__scrollTable mb-4">
+          <div class="kit__utils__table mb-4">
+            <nz-table #basicTable [nzData]="requests" [nzShowPagination]="false" class="kit__utils__table mb-4">
               <thead>
                 <tr>
                   <th class="bg-transparent">Date</th>
