--- a/src/app/pages/dashboard/alpha/alpha.component.html
+++ b/src/app/pages/dashboard/alpha/alpha.component.html
@@ -63,7 +63,7 @@
         </div>
       </div>
       <div class="card-body">
-        <nz-table [nzData]="displayReferalsData" [nzShowPagination]="false" class="utils__scrollTable">
+        <nz-table [nzData]="displayReferalsData" [nzShowPagination]="false" class="kit__utils__table">
           <thead (nzSortChange)="sort($event)" nzSingleSort>
             <tr>
               <th>Name</th>
