--- a/src/app/pages/dashboard/beta/beta.component.html
+++ b/src/app/pages/dashboard/beta/beta.component.html
@@ -285,7 +285,7 @@
         <div class="mb-4">
           <kit-general-22></kit-general-22>
         </div>
-        <nz-table [nzData]="displayDatabaseData" [nzShowPagination]="false" class="utils__scrollTable">
+        <nz-table [nzData]="displayDatabaseData" [nzShowPagination]="false" class="kit__utils__table">
           <thead (nzSortChange)="sort($event)" nzSingleSort>
             <tr>
               <th>Name</th>
