--- a/src/app/pages/ecommerce/orders/orders.component.html
+++ b/src/app/pages/ecommerce/orders/orders.component.html
@@ -14,7 +14,7 @@
       </div>
     </div>
     <div class="card-body">
-      <nz-table #orderTable [nzData]="listOfDisplayData" class="air__utils__scrollTable mb-4">
+      <nz-table #orderTable [nzData]="listOfDisplayData" class="kit__utils__table mb-4">
         <thead>
           <tr>
             <th nzShowSort [(nzSort)]="mapOfSort.id" (nzSortChange)="sort('id', $event)">
