--- a/src/app/components/kit-widgets/Tables/3/3.component.scss
+++ b/src/app/components/kit-widgets/Tables/3/3.component.scss
@@ -54,7 +54,7 @@
 // dark theme
 :host-context(body.kit__dark) {
   .tabs {
-    :ng-deep .ant-tabs-bar {
+    ::ng-deep .ant-tabs-bar {
       &::before {
         background-color: $dark-gray-4;
       }
