--- a/src/app/pages/dashboard/gamma/gamma.component.html
+++ b/src/app/pages/dashboard/gamma/gamma.component.html
@@ -103,7 +103,7 @@
         <div class="row">
           <div class="col-xl-6">
             <div class="mb-3">
-              <nz-table [nzData]="supportCasesTableData" [nzShowPagination]="false" class="utils__scrollTable">
+              <nz-table [nzData]="supportCasesTableData" [nzShowPagination]="false" class="kit__utils__table">
                 <thead>
                   <tr>
                     <th>Type</th>
