--- a/src/app/pages/tables/antd/examples/editable-rows/editable-rows.component.html
+++ b/src/app/pages/tables/antd/examples/editable-rows/editable-rows.component.html
@@ -1,4 +1,4 @@
-<nz-table #editRowTable nzBordered [nzData]="listOfData" class="kit__utils__scrollTable mb-4" [nzScroll]="{x: '100%'}">
+<nz-table #editRowTable nzBordered [nzData]="listOfData" class="kit__utils__table mb-4" [nzScroll]="{x: '100%'}">
   <thead>
     <tr>
       <th nzWidth="25%">Name</th>
