table scroll-x amendments

--- a/src/app/pages/dashboard/crypto/crypto.component.html
+++ b/src/app/pages/dashboard/crypto/crypto.component.html
@@ -185,8 +185,7 @@
         <div class="cui-crypto-dashboard-order">
           <div class="cui-crypto-dashboard-order-left">
             <div class="cui-crypto-dashboard-table text-nowrap">
-              <nz-table #orderBookSellTable nzSize="small" [nzData]="orderBookSell" class="kit__utils__table"
-                [nzScroll]="{x: '100%'}">
+              <nz-table #orderBookSellTable nzSize="small" [nzData]="orderBookSell" class="kit__utils__table">
                 <thead>
                   <tr>
                     <th class="text-right">SUM</th>
