--- a/src/app/pages/apps/mail/mail.component.html
+++ b/src/app/pages/apps/mail/mail.component.html
@@ -45,7 +45,7 @@
           </nz-tabset>
         </div>
         <div class="card-body">
-          <nz-table #mailTable [nzScroll]="{x: '100%'}" [nzShowPagination]="false" [nzData]="listOfAllData"
+          <nz-table #mailTable [nzShowPagination]="false" [nzData]="listOfAllData"
             (nzCurrentPageDataChange)="currentPageDataChange($event)" class="kit__utils__table mb-4">
             <thead>
               <tr>
