--- a/src/app/pages/ecommerce/cart/cart.component.html
+++ b/src/app/pages/ecommerce/cart/cart.component.html
@@ -7,8 +7,7 @@
       <h6 class="mb-4 text-uppercase">
         <strong>Order items</strong>
       </h6>
-      <nz-table #cartTable [nzShowPagination]="false" [nzData]="products" class="kit__utils__table mb-4"
-        [nzScroll]="{x: '100%'}">
+      <nz-table #cartTable [nzShowPagination]="false" [nzData]="products" class="kit__utils__table mb-4">
         <thead>
           <tr>
             <th>#</th>
