--- a/src/app/pages/tables/antd/examples/editable-cells/editable-cells.component.html
+++ b/src/app/pages/tables/antd/examples/editable-cells/editable-cells.component.html
@@ -1,5 +1,5 @@
 <button nz-button (click)="addRow()" nzType="primary">Add</button>
-<nz-table #editRowTable nzBordered [nzData]="listOfData" class="kit__utils__table mb-4" [nzScroll]="{x: '100%'}">
+<nz-table #editRowTable nzBordered [nzData]="listOfData" class="kit__utils__table mb-4">
   <thead>
     <tr>
       <th nzWidth="30%">Name</th>
