--- a/src/app/pages/tables/antd/examples/filter/filter.component.html
+++ b/src/app/pages/tables/antd/examples/filter/filter.component.html
@@ -1,4 +1,4 @@
-<nz-table #filterTable [nzData]="listOfDisplayData" class="kit__utils__table mb-4" [nzScroll]="{x: '100%'}">
+<nz-table #filterTable [nzData]="listOfDisplayData" class="kit__utils__table mb-4">
   <thead (nzSortChange)="sort($event)" nzSingleSort>
     <tr>
       <th nzShowSort nzSortKey="name" nzShowFilter [nzFilters]="listOfName"
