setting title fix

--- a/src/app/components/layout/Sidebar/sidebar.component.html
+++ b/src/app/components/layout/Sidebar/sidebar.component.html
@@ -4,7 +4,7 @@
       <div class="cui__sidebar__inner">
         <a href="javascript: void(0);" class="fe fe-x-circle cui__sidebar__close" (click)="toggle()"></a>
         <h5>
-          <strong>Theme Settings</strong>
+          <strong>Application Name</strong>
         </h5>
         <div class="cui__utils__line" style="margin-top: 25px; margin-bottom: 30px"></div>
         <div class="cui__sidebar__type">
