setting title fix

--- a/src/app/components/layout/Sidebar/sidebar.component.html
+++ b/src/app/components/layout/Sidebar/sidebar.component.html
@@ -4,12 +4,12 @@
       <div class="cui__sidebar__inner">
         <a href="javascript: void(0);" class="fe fe-x-circle cui__sidebar__close" (click)="toggle()"></a>
         <h5>
-          <strong>Application Name</strong>
+          <strong>Theme Settings</strong>
         </h5>
         <div class="cui__utils__line" style="margin-top: 25px; margin-bottom: 30px"></div>
         <div class="cui__sidebar__type">
           <div class="cui__sidebar__type__title">
-            <span>Menu Layout</span>
+            <span>Application Name</span>
           </div>
           <div class="cui__sidebar__type__items">
             <input nz-input [ngModel]="logo" (ngModelChange)="settingChange($event, 'logo')" />
