--- a/src/app/pages/apps/digitalocean-create/digitalocean-create.component.html
+++ b/src/app/pages/apps/digitalocean-create/digitalocean-create.component.html
@@ -20,54 +20,52 @@
   <h6 class="mb-4 text-uppercase">
     <strong>Choose an image</strong>
   </h6>
-  <div class="d-flex flex-wrap mb-5">
-    <div class="card width-200 text-center mr-5">
-      <div class="card-header pt-3 pb-3">
-        <div class="text-uppercase text-dark font-weight-bold">Ubuntu</div>
-      </div>
-      <div class="card-body pt-3 pb-3">
-        <div class="text-center text-gray-5">
-          18.04 x86
+  <div class="row mb-5">
+    <div class="col-md-3 col-sm-6 col-xs-12">
+      <div class="card text-center">
+        <div class="card-header pt-3 pb-3">
+          <div class="text-uppercase text-dark font-weight-bold">Ubuntu</div>
+        </div>
+        <div class="card-body pt-3 pb-3">
+          <div class="text-center text-gray-5">
+            18.04 x86
+          </div>
         </div>
       </div>
     </div>
-    <div class="card width-200 text-center mr-5 bg-light border-blue">
-      <div class="card-header pt-3 pb-3">
-        <div class="text-uppercase text-dark font-weight-bold">Freebsd</div>
-      </div>
-      <div class="card-body pt-3 pb-3">
-        <div class="text-center text-gray-5">
-          18.04 x86
+    <div class="col-md-3 col-sm-6 col-xs-12">
+      <div class="card text-center bg-light border-blue">
+        <div class="card-header pt-3 pb-3">
+          <div class="text-uppercase text-dark font-weight-bold">Freebsd</div>
+        </div>
+        <div class="card-body pt-3 pb-3">
+          <div class="text-center text-gray-5">
+            18.04 x86
+          </div>
         </div>
       </div>
     </div>
-    <div class="card width-200 text-center mr-5">
-      <div class="card-header pt-3 pb-3">
-        <div class="text-uppercase text-dark font-weight-bold">Fedora</div>
-      </div>
-      <div class="card-body pt-3 pb-3">
-        <div class="text-center text-gray-5">
-          18.04 x86
+    <div class="col-md-3 col-sm-6 col-xs-12">
+      <div class="card text-center">
+        <div class="card-header pt-3 pb-3">
+          <div class="text-uppercase text-dark font-weight-bold">Fedora</div>
+        </div>
+        <div class="card-body pt-3 pb-3">
+          <div class="text-center text-gray-5">
+            18.04 x86
+          </div>
         </div>
       </div>
     </div>
-    <div class="card width-200 text-center mr-5">
-      <div class="card-header pt-3 pb-3">
-        <div class="text-uppercase text-dark font-weight-bold">Debian</div>
-      </div>
-      <div class="card-body pt-3 pb-3">
-        <div class="text-center text-gray-5">
-          18.04 x86
+    <div class="col-md-3 col-sm-6 col-xs-12">
+      <div class="card text-center">
+        <div class="card-header pt-3 pb-3">
+          <div class="text-uppercase text-dark font-weight-bold">Debian</div>
         </div>
-      </div>
-    </div>
-    <div class="card width-200 text-center">
-      <div class="card-header pt-3 pb-3">
-        <div class="text-uppercase text-dark font-weight-bold">Centos</div>
-      </div>
-      <div class="card-body pt-3 pb-3">
-        <div class="text-center text-gray-5">
-          18.04 x86
+        <div class="card-body pt-3 pb-3">
+          <div class="text-center text-gray-5">
+            18.04 x86
+          </div>
         </div>
       </div>
     </div>
