--- a/src/app/components/layout/Menu/MenuTop/menu-top.component.html
+++ b/src/app/components/layout/Menu/MenuTop/menu-top.component.html
@@ -66,7 +66,7 @@
             <ng-container *ngIf="!item.roles || item.roles.includes(role)">
               <!-- disabled item -->
               <li nz-menu-item *ngIf="item.disabled" [nzSelected]="item.selected" [nzDisabled]="true" nz-tooltip
-                nzPlacement="right" [nzTitle]="isMenuCollapsed && level === 0 ? tooltipTpl : ''">
+                nzTooltipPlacement="right" [nzTooltipTitle]="isMenuCollapsed && level === 0 ? tooltipTpl : ''">
                 <span [ngStyle]="{'padding-left.px': isMenuCollapsed ? '0' : level * 15}">
                   <i *ngIf="item.icon" [ngClass]="[item.icon, 'icon']"></i>
                   <span class="title">{{item.title}}</span>
@@ -75,8 +75,8 @@
               </li>
               <!-- main item -->
               <li nz-menu-item *ngIf="!item.children && item.url" routerLink={{item.url}} [nzSelected]="item.selected"
-                [nzDisabled]="item.disabled" nz-tooltip nzPlacement="right"
-                [nzTitle]="isMenuCollapsed && level === 0 ? tooltipTpl : ''">
+                [nzDisabled]="item.disabled" nz-tooltip nzTooltipPlacement="right"
+                [nzTooltipTitle]="isMenuCollapsed && level === 0 ? tooltipTpl : ''">
                 <span [ngStyle]="{'padding-left.px': isMenuCollapsed ? '0' : level * 15}">
                   <i *ngIf="item.icon" [ngClass]="[item.icon, 'icon']"></i>
                   <span class="title">{{item.title}}</span>
