--- a/src/app/components/layout/Topbar/Search/search.component.html
+++ b/src/app/components/layout/Topbar/Search/search.component.html
@@ -1,7 +1,6 @@
 <div class="d-inline-block mr-4">
-  <nz-input-group [nzPrefix]="prefixIconSearch">
-    <input nz-input class="extInput" (focus)="setVisible()" placeholder="{{ 'topBar.typeToSearch' | translate }}"
-      style="width: 200px" />
+  <nz-input-group class="extInput" [nzPrefix]="prefixIconSearch">
+    <input nz-input (focus)="setVisible()" placeholder="{{ 'topBar.typeToSearch' | translate }}" style="width: 200px" />
   </nz-input-group>
   <ng-template #prefixIconSearch>
     <i nz-icon nzType="search" class="extInputIcon" style="color: rgba(0,0,0,.25)"></i>
