--- a/src/app/pages/apps/todoist-list/todoist-list.component.html
+++ b/src/app/pages/apps/todoist-list/todoist-list.component.html
@@ -49,16 +49,16 @@
           </div>
           <div>
             <div>
-              <a href="javascript: void(0);" class="btn btn-sm btn-light mr-2" nz-tooltip nzTitle="Unlock Account"
-                nzPlacement="top">
+              <a href="javascript: void(0);" class="btn btn-sm btn-light mr-2" nz-tooltip
+                nzTooltipTitle="Unlock Account" nzTooltipPlacement="top">
                 <i class="fe fe-unlock"></i>
               </a>
-              <a href="javascript: void(0);" class="btn btn-sm btn-light mr-2" nz-tooltip nzTitle="Mark as important"
-                nzPlacement="top">
+              <a href="javascript: void(0);" class="btn btn-sm btn-light mr-2" nz-tooltip
+                nzTooltipTitle="Mark as important" nzTooltipPlacement="top">
                 <i class="fe fe-star"></i>
               </a>
-              <a href="javascript: void(0);" class="btn btn-sm btn-light mr-2" nz-tooltip nzTitle="Delete user"
-                nzPlacement="top">
+              <a href="javascript: void(0);" class="btn btn-sm btn-light mr-2" nz-tooltip nzTooltipTitle="Delete user"
+                nzTooltipPlacement="top">
                 <i class="fe fe-trash"></i>
               </a>
             </div>
