--- a/src/app/pages/dashboard/alpha/alpha.component.html
+++ b/src/app/pages/dashboard/alpha/alpha.component.html
@@ -64,14 +64,14 @@
       </div>
       <div class="card-body">
         <nz-table [nzData]="displayReferalsData" [nzShowPagination]="false" class="kit__utils__table">
-          <thead (nzSortChange)="sort($event)" nzSingleSort>
+          <thead (nzSortChange)="sort($event)">
             <tr>
               <th>Name</th>
               <th>Position</th>
               <th>Office</th>
-              <th nzShowSort nzSortKey="age">Age</th>
+              <th nzShowSort nzColumnKey="age">Age</th>
               <th>Date</th>
-              <th nzShowSort nzSortKey="salary">Salary</th>
+              <th nzShowSort nzColumnKey="salary">Salary</th>
             </tr>
           </thead>
           <tbody>
