--- a/src/app/pages/tables/antd/examples/editable-rows/editable-rows.component.html
+++ b/src/app/pages/tables/antd/examples/editable-rows/editable-rows.component.html
@@ -40,7 +40,7 @@
           </ng-container>
           <ng-template #saveTpl>
             <a (click)="saveEdit(data.id)">Save</a>
-            <a nz-popconfirm nzTitle="Sure to cancel?" (nzOnConfirm)="cancelEdit(data.id)">Cancel</a>
+            <a nz-popconfirm nzPopconfirmTitle="Sure to cancel?" (nzOnConfirm)="cancelEdit(data.id)">Cancel</a>
           </ng-template>
         </div>
       </td>
