--- a/src/app/components/layout/Sidebar/sidebar.component.html
+++ b/src/app/components/layout/Sidebar/sidebar.component.html
@@ -172,10 +172,10 @@
     <i class="fe fe-settings"></i>
   </a>
   <a href="javascript: void(0);" style="bottom: calc(50% + 60px)"
-    (click)="setTheme(theme === 'light' ? 'dark' : 'light')" nzTooltipTitle="Switch Dark / Light Theme"
+    (click)="setTheme(theme === 'default' ? 'dark' : 'default')" nzTooltipTitle="Switch Dark / Light Theme"
     nzTooltipPlacement="left" nz-tooltip class="cui__sidebar__toggleButton">
-    <i *ngIf="theme === 'light'" class="fe fe-moon"></i>
-    <i *ngIf="theme !== 'light'" class="fe fe-sun"></i>
+    <i *ngIf="theme === 'default'" class="fe fe-moon"></i>
+    <i *ngIf="theme !== 'default'" class="fe fe-sun"></i>
   </a>
   <a href="javascript: void(0);" style="bottom: calc(50%)" nzTooltipTitle="Set Primary Color" nzTooltipPlacement="left"
     nz-tooltip class="cui__sidebar__toggleButton color" [ngClass]="{
