--- a/src/app/components/layout/Topbar/LanguageSwitcher/language-switcher.component.html
+++ b/src/app/components/layout/Topbar/LanguageSwitcher/language-switcher.component.html
@@ -3,20 +3,20 @@
     <span class="text-uppercase">{{language}}</span>
   </div>
   <nz-dropdown-menu #menu="nzDropdownMenu">
-    <ul nz-menu (nzClick)="changeLanguage($event)">
-      <li nz-menu-item key="en-US">
+    <ul nz-menu>
+      <li nz-menu-item (click)="changeLanguage('en-US')">
         <span class="text-uppercase font-size-12 mr-2">EN</span>
         English
       </li>
-      <li nz-menu-item key="fr-FR">
+      <li nz-menu-item (click)="changeLanguage('fr-FR')">
         <span class="text-uppercase font-size-12 mr-2">FR</span>
         French
       </li>
-      <li nz-menu-item key="ru-RU">
+      <li nz-menu-item (click)="changeLanguage('ru-RU')">
         <span class="text-uppercase font-size-12 mr-2">RU</span>
         Русский
       </li>
-      <li nz-menu-item key="zh-CN">
+      <li nz-menu-item (click)="changeLanguage('zh-CN')">
         <span class="text-uppercase font-size-12 mr-2">CN</span>
         简体中文
       </li>
