--- a/src/global.scss
+++ b/src/global.scss
@@ -1,10 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
 @import 'app/components/kit-vendors/antd/style';
 @import 'app/components/kit-vendors/bootstrap/style';
-@import 'app/components/kit-core/style'; // Clean UI KIT styles
-@import 'app/components/styles/style'; // Clean UI styles
+@import 'app/components/kit-core/style'; // Clean UI KIT core styles
 @import 'app/components/kit-vendors/nprogress/style';
 @import 'app/components/kit-vendors/chartist/style';
 @import 'app/components/kit-vendors/perfect-scrollbar/style';
 @import 'app/components/kit-vendors/nestable/style';
 @import 'app/components/kit-vendors/quill/style';
+
+@import 'app/components/cui-styles/style'; // Clean UI styles
