css amendments: kit_dark=>[data-kit-theme="dark"]

--- a/src/app/components/cui-layout/Breadcrumbs/breadcrumbs.component.scss
+++ b/src/app/components/cui-layout/Breadcrumbs/breadcrumbs.component.scss
@@ -20,7 +20,7 @@
 }
 
 // dark theme
-:host-context(body.kit__dark) {
+:host-context([data-kit-theme='dark']) {
   .breadcrumbs {
     color: $dark-gray-1;
   }
