--- a/src/app/components/cui-layout/Footer/footer.component.scss
+++ b/src/app/components/cui-layout/Footer/footer.component.scss
@@ -35,7 +35,7 @@
 }
 
 // dark theme
-:host-context(body.kit__dark) {
+:host-context([data-kit-theme='dark']) {
   .footer {
     color: $dark-gray-1;
   }
