--- a/src/app/components/cui-layout/Sidebar/sidebar.component.scss
+++ b/src/app/components/cui-layout/Sidebar/sidebar.component.scss
@@ -244,7 +244,7 @@
 }
 
 // dark theme
-:host-context(body.kit__dark) {
+:host-context([data-kit-theme='dark']) {
   .cui__sidebar {
     background: $dark-gray-6;
 
