--- a/src/app/components/cui-layout/Topbar/Search/search.component.scss
+++ b/src/app/components/cui-layout/Topbar/Search/search.component.scss
@@ -168,7 +168,7 @@
 }
 
 // dark theme
-:host-context(body.kit__dark) {
+:host-context([data-kit-theme='dark']) {
   .extInput {
     background-color: $dark-gray-4;
   }
