--- a/src/app/components/cui-layout/Topbar/topbar.component.scss
+++ b/src/app/components/cui-layout/Topbar/topbar.component.scss
@@ -17,7 +17,7 @@
 }
 
 // dark theme
-:host-context(body.kit__dark) {
+:host-context([data-kit-theme='dark']) {
   .topbar {
     background: $dark-gray-6;
     color: $dark-gray-1;
