--- a/src/app/components/kit-core/css/utils.scss
+++ b/src/app/components/kit-core/css/utils.scss
@@ -451,22 +451,10 @@
       font-size: rem(18);
     }
   }
-
-  &__docs {
-    & > .container .row > [class^='col'],
-    & > .container-fluid .row > [class^='col'],
-    .themed-container {
-      padding-top: 0.75rem;
-      padding-bottom: 0.75rem;
-      background-color: $gray-1;
-      border: 1px solid $border;
-      margin-bottom: rem(10);
-    }
-  }
 }
 
 // dark theme
-body.kit__dark {
+[data-kit-theme='dark'] {
   .kit {
     &__utils {
       &__link {
@@ -500,15 +488,6 @@ body.kit__dark {
             background: $dark-gray-1;
             color: $dark-gray-4;
           }
-        }
-      }
-
-      &__docs {
-        & > .container .row > [class^='col'],
-        & > .container-fluid .row > [class^='col'],
-        .themed-container {
-          background-color: $dark-gray-5;
-          border: 1px solid $dark-gray-4;
         }
       }
     }
