--- a/src/app/components/kit-widgets/Lists/1/1.component.scss
+++ b/src/app/components/kit-widgets/Lists/1/1.component.scss
@@ -48,7 +48,7 @@
 }
 
 // dark theme
-:host-context(body.kit__dark) {
+:host-context([data-kit-theme='dark']) {
   .itemPic {
     background: $dark-gray-4;
   }
