--- a/src/app/components/kit-widgets/Lists/6/6.component.scss
+++ b/src/app/components/kit-widgets/Lists/6/6.component.scss
@@ -41,7 +41,7 @@
 }
 
 // dark theme
-:host-context(.kit__dark) {
+:host-context([data-kit-theme='dark']) {
   .item {
     border-bottom: 1px solid $dark-gray-4;
     &:hover {
