--- a/src/app/components/kit-widgets/Lists/9/9.component.scss
+++ b/src/app/components/kit-widgets/Lists/9/9.component.scss
@@ -70,7 +70,7 @@
 }
 
 // dark theme
-:host-context(body.kit__dark) {
+:host-context([data-kit-theme='dark']) {
   .itemDots {
     opacity: 0.1;
   }
