--- a/src/app/components/cui-layout/Topbar/LanguageSwitcher/language-switcher.component.scss
+++ b/src/app/components/cui-layout/Topbar/LanguageSwitcher/language-switcher.component.scss
@@ -36,7 +36,7 @@
 }
 
 // dark theme
-:global(body.kit__dark) {
+:host-context([data-kit-theme='dark']) {
   .dropdown {
     color: $dark-gray-2;
 
