--- a/src/app/components/cui-layout/Topbar/UserMenu/user-menu.component.scss
+++ b/src/app/components/cui-layout/Topbar/UserMenu/user-menu.component.scss
@@ -39,7 +39,7 @@
 }
 
 // dark theme
-:host-context(body.kit__dark) {
+:host-context([data-kit-theme='dark']) {
   .avatar {
     background: $dark-gray-4 !important;
   }
