--- a/src/app/components/kit-vendors/antd/css/tag.scss
+++ b/src/app/components/kit-vendors/antd/css/tag.scss
@@ -1,12 +1,10 @@
 // Import mixins
 @import 'src/app/components/kit-core/mixins.scss';
 
-body {
-  ////////////////////////////////////////////////////////////////////////////////////////////
-  // DARK THEME STYLES
-  &.kit__dark {
-    .ant-tag {
-      border-color: transparent;
-    }
+////////////////////////////////////////////////////////////////////////////////////////////
+// DARK THEME STYLES
+[data-kit-theme='dark'] {
+  .ant-tag {
+    border-color: transparent;
   }
 }
