--- a/src/app/components/kit-vendors/quill/style.scss
+++ b/src/app/components/kit-vendors/quill/style.scss
@@ -4,7 +4,7 @@
 /*  QUILL */
 
 // dark theme
-body.kit__dark {
+[data-kit-theme='dark'] {
   .ql-container,
   .ql-toolbar {
     border-color: $dark-gray-4;
