--- a/src/app/components/kit-widgets/General/6/6.component.scss
+++ b/src/app/components/kit-widgets/General/6/6.component.scss
@@ -20,7 +20,7 @@
 }
 
 // dark theme
-:host-context(body.kit__dark) {
+:host-context([data-kit-theme='dark']) {
   .footer {
     background: $dark-gray-4;
   }
