--- a/src/app/components/kit-widgets/Lists/19/19.component.scss
+++ b/src/app/components/kit-widgets/Lists/19/19.component.scss
@@ -86,7 +86,7 @@
 }
 
 // dark theme
-:host-context(body.kit__dark) {
+:host-context([data-kit-theme='dark']) {
   .itemSeparator {
     &:before {
       background: $dark-gray-4;
