--- a/src/app/components/kit-widgets/Lists/7/7.component.scss
+++ b/src/app/components/kit-widgets/Lists/7/7.component.scss
@@ -145,7 +145,7 @@
 }
 
 // dark theme
-:host-context(body.kit__dark) {
+:host-context([data-kit-theme='dark']) {
   .list {
     &:before {
       background: $dark-gray-4;
