--- a/src/app/components/kit-widgets/Lists/8/8.component.scss
+++ b/src/app/components/kit-widgets/Lists/8/8.component.scss
@@ -91,7 +91,7 @@
 }
 
 // dark theme
-:host-context(body.kit__dark) {
+:host-context([data-kit-theme='dark']) {
   .item {
     border-bottom: 1px solid $dark-gray-4;
     &:hover {
