--- a/src/app/components/kit-widgets/Tables/6/6.component.scss
+++ b/src/app/components/kit-widgets/Tables/6/6.component.scss
@@ -29,7 +29,7 @@
 }
 
 // dark theme
-:host-context(body.kit__dark) {
+:host-context([data-kit-theme='dark']) {
   .textDivider {
     &::before,
     &::after {
