missed [data-kit-theme='dark']

--- a/src/app/layouts/Auth/auth.component.scss
+++ b/src/app/layouts/Auth/auth.component.scss
@@ -83,7 +83,7 @@
 }
 
 // dark theme
-:host-context(body.kit__dark) {
+:host-context([data-kit-theme='dark']) {
   .authContainer {
     background: transparent !important;
   }
