--- a/src/app/pages/apps/jira-agile-board/jira-agile-board.component.scss
+++ b/src/app/pages/apps/jira-agile-board/jira-agile-board.component.scss
@@ -26,7 +26,7 @@
 }
 
 // dark theme
-:host-context(body.kit__dark) {
+:host-context([data-kit-theme='dark']) {
   .card {
     background: $dark-gray-4;
   }
