--- a/src/app/pages/apps/mail/mail.component.scss
+++ b/src/app/pages/apps/mail/mail.component.scss
@@ -31,7 +31,7 @@
 }
 
 // dark theme
-:host-context(body.kit__dark) {
+:host-context([data-kit-theme='dark']) {
   .category {
     &:hover,
     &.current {
