--- a/src/app/pages/apps/todoist-list/todoist-list.component.scss
+++ b/src/app/pages/apps/todoist-list/todoist-list.component.scss
@@ -37,7 +37,7 @@
 }
 
 // dark theme
-:host-context(body.kit__dark) {
+:host-context([data-kit-theme='dark']) {
   .category {
     &:hover,
     &.current {
